--- a/Bitad2021/Bitad2021/Views/WorkshopsPage.xaml
+++ b/Bitad2021/Bitad2021/Views/WorkshopsPage.xaml
@@ -18,10 +18,11 @@
                 <ListView.ItemTemplate>  
                     <DataTemplate x:DataType="models:Workshop">  
                         <ViewCell>
-                            <Frame HasShadow="True"
-                                       BackgroundColor="White"
-                                       Margin="20 ,10, 20, 0" 
-                                       Padding="20,20,20,20">
+                            <StackLayout Padding="0,0,0,10">
+                                <Frame HasShadow="True"
+                                   BackgroundColor="White"
+                                   Margin="20 ,10, 20, 0" 
+                                   Padding="20,20,20,20">
                                 <Grid>
                                     <Grid.RowDefinitions>
                                         <RowDefinition Height="*" />
@@ -76,6 +77,8 @@
 
                                 </Grid>
                             </Frame>
+                            </StackLayout>
+                            
                         </ViewCell>  
                     </DataTemplate>  
                 </ListView.ItemTemplate>  
