--- a/Bitad2021/Bitad2021/Views/WorkshopPage.xaml
+++ b/Bitad2021/Bitad2021/Views/WorkshopPage.xaml
@@ -73,7 +73,10 @@
                            LineBreakMode="WordWrap"/>
                     
                     
-                   
+                    <Button Text="Zapisz się" Command="{Binding SelectWorkshopCommand}"
+                            Style="{StaticResource RoundButtonWithBorder}"
+                            Margin="60,20,60,0"
+                            IsVisible="{Binding IsSelectWorkshopButtonVisible}"/>
                 </StackLayout>
             </Frame>
         </ScrollView>
