--- a/Bitad2021/Bitad2021/Views/SettingsPage.xaml
+++ b/Bitad2021/Bitad2021/Views/SettingsPage.xaml
@@ -19,6 +19,9 @@
                         <Label Text="{Binding Path=User.CurrentScore, StringFormat='Twoje punkty QR: {0}'}"
                                FontSize="Medium"
                                FontAttributes="Bold"/>
+                        <Label Text="{Binding Path=User.RewardCode, StringFormat='Twój kod do odebrania nagrody: {0}'}"
+                               FontSize="Medium"
+                               FontAttributes="Bold"/>
 
                     </StackLayout>
                 </Frame>
@@ -34,7 +37,6 @@
                                 <common1:EncodingOptions Height="300" Width="300"/>
                             </zxing:ZXingBarcodeImageView.BarcodeOptions>
                         </zxing:ZXingBarcodeImageView>
-                        <Label Text="{Binding Path=User.AttendanceCode, StringFormat='Kod: {0}'}"/>
                     </StackLayout>
                 
                 </Frame>
@@ -52,13 +54,12 @@
                                 <common1:EncodingOptions Height="300" Width="300"/>
                             </zxing:ZXingBarcodeImageView.BarcodeOptions>
                         </zxing:ZXingBarcodeImageView>
-                        <Label Text="{Binding Path=User.WorkshopAttendanceCode, StringFormat='Kod: {0}'}"/>
                     </StackLayout>
                 </Frame>
             
                 <Button Command="{Binding LogoutCommand}" Text="Wyloguj"
                         Style="{StaticResource RoundButtonWithBorder}"
-                        Margin="60,0,60,0"/>
+                        Margin="70,0,70,0"/>
             </StackLayout>
         </ScrollView>
         
