--- a/Bitad2021/Bitad2021/Views/SettingsPage.xaml
+++ b/Bitad2021/Bitad2021/Views/SettingsPage.xaml
@@ -11,7 +11,7 @@
         <ScrollView>
             <StackLayout>
                 <Frame HasShadow="True"
-                       Margin="10">
+                       Margin="20">
                     <StackLayout>
                         <Label Text="{Binding Path=User.FirstName, StringFormat='Witaj {0}'}"
                                FontSize="Large"
@@ -27,7 +27,7 @@
                 </Frame>
             
                 <Frame HasShadow="True"
-                       Margin="10">
+                       Margin="20">
                     <StackLayout>
                         <Label Text="Pokaż ten kod QR jednemu z naszych wolontariuszy aby potwierdził Twoją obecność na konfrencji: "/>
                         <zxing:ZXingBarcodeImageView BarcodeValue="{Binding User.AttendanceCode}"
@@ -39,6 +39,66 @@
                         </zxing:ZXingBarcodeImageView>
                     </StackLayout>
                 
+                </Frame>
+                
+                <Frame HasShadow="False"
+                   BackgroundColor="White"
+                   Margin="20 ,10, 20, 0" 
+                   Padding="20,20,20,20"
+                   IsVisible="{Binding IsWorkshopCodeVisible}">
+                    <Grid BindingContext="{Binding User.Workshop}">
+                        <Grid.RowDefinitions>
+                            <RowDefinition Height="*" />
+                            <RowDefinition Height="55" />
+                        </Grid.RowDefinitions>
+                        <Grid.ColumnDefinitions>
+                            <ColumnDefinition Width="2*"/>
+                            <ColumnDefinition Width="2*"/>
+                            <ColumnDefinition Width="80"/>
+                        </Grid.ColumnDefinitions>
+                        <Label Grid.Row="0" Grid.Column="0" 
+                               Text="{Binding Room}" />
+                        <Label Grid.Row="0" Grid.Column="1">
+                            <Label.Text>
+                                <MultiBinding StringFormat="{}{0:HH:mm} - {1:HH:mm}">
+                                    <Binding Path="Start"/>
+                                    <Binding Path="End"/>
+                                </MultiBinding>
+                            </Label.Text>
+                        </Label>
+                        
+                        
+                        
+                        <StackLayout Grid.Row="1" Grid.Column="0" Grid.ColumnSpan="2"
+                                     VerticalOptions="Center">
+                            <Label 
+                                Text="{Binding Title}" 
+                                FontAttributes="Bold"
+                                TextColor="#333"/>  
+                            <!-- TODO: Make this red if full -->
+                            <Label FontSize="Micro"
+                                   FontAttributes="Italic"
+                                   TextColor="#333">
+                                <Label.Text>
+                                    <MultiBinding StringFormat="{}{0}/{1}">
+                                        <Binding Path="ParticipantsNumber"/>
+                                        <Binding Path="MaxParticipants"/>
+                                    </MultiBinding>
+                                </Label.Text>
+                            </Label>
+                        </StackLayout>
+
+                        
+                        <Frame Grid.Row="0" Grid.Column="2" Grid.RowSpan="2"
+                                Padding="0" 
+                                CornerRadius="100">
+                            <Image Source="{Binding Speaker.Picture}"
+                                   HorizontalOptions="FillAndExpand"
+                                   VerticalOptions="FillAndExpand"
+                                   Aspect="AspectFill"/>
+                        </Frame> 
+
+                    </Grid>
                 </Frame>
             
                 <Button Command="{Binding LogoutCommand}" Text="Wyloguj"
